// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/15/2010
	r256 [pakpil]
	* Added missing 'breeder_3ceAM' npc in r253.
	
	r255 [pakpil]
	* Fixed WL_HELLINFERNO that was not working propertly.
	* Minor cleanup in skill_additional_effect.
	* Fixed a mistake in Thanatos Tower quest in r253. Sorry :/

	r254 [pakpil]
	* Fixed an issue in WL_READING_SB where it wasn't removing SC_STOP status when the Warlock haven't Spellbooks on the inventory.

	r253 [pakpil]
	* Fixed  some items that aren't given its bonus correctly to certain classes.
	* Fixed splash area in skill_db that were wrong. Can't remember the reporter's name, thx anyway.
	* Fixed WL_COMET adjusting its behavior to the official one.
	* Minor fix in WL_COMET and AB_ADORAMUS that should fails before cast them if you haven't requires gemstones when are casted alone.
	* Added check for 3rd jobs in Thanatos tower quest.
	* Added custom Breeder for 3rd jobs. Plz report any problem.

	r252 [pakpil]
	* Fixed an issue where the client freeze when use disguise. Bug report 252.

03/14/2010
	r251 [pakpil]
	* Fixed RA_ELECTRICSHOCKET that wasn't draining SP and wasn't traped all in 5x5 area.

	r250 [Jobbie]
	* Update skill cast time of some Rune Knight skills.

	r249 [Jobbie]
	* Corrected some items in item_db2.
	* Added NC_MAINFRAME, NC_SILVERSNIPER, NC_DISJOINT, GN_S_PHARMACY, GN_MIX_COOKING and GN_MAKEBOMB.
	* Fixed some radius effect, cooldown and casttime of Mechanic and Genetic skills.
	* Corrected some requirements when using NC_SILVERSNIPER.
	* Corrected some SC_* in which mado is unequipped it is not ended.
	* Fixed missing auto trigger code of Warg Strike when attacking normal or with Bow.
	* Fixed NC_COLDSLOWER which is having the same status effect.
	* Fixed SC_LEECHESEND. follow up (r246).

	r248 [pakpil]